--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div style="text-align:center">
   <mat-toolbar color="primary"><h1>{{title}}</h1></mat-toolbar>
   <div class="button-row">
-      <a mat-raised-button routerLink="books">List</a>
-      <a mat-raised-button routerLink="addNewBooks">Add</a>
+      <button mat-raised-button routerLink="books">List</button>
+      <button mat-raised-button routerLink="addNewBooks">Add</button>
   </div>
   <router-outlet></router-outlet>
 </div>
