--- a/src/app/book/updateBookModalTemplate.html
+++ b/src/app/book/updateBookModalTemplate.html
@@ -1,14 +1,12 @@
 <div class="modal-header">
-    <h4 class="modal-title">Hi Akash!</h4>
+    <h4 class="modal-title">Header</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<mat-card>
-    <div class="modal-body">
-            <p>Hey there, {{name}}!</p>
-    </div>
-</mat-card>
+<div class="modal-body">
+    <p>Hey there, {{name}}!</p>
+</div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="save()">Save</button>
     <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">Close</button>
