--- a/src/app/book/updateBookModalTemplate.html
+++ b/src/app/book/updateBookModalTemplate.html
@@ -1,13 +1,18 @@
 <div class="modal-header">
-    <h4 class="modal-title">Header</h4>
+    <h4 class="modal-title">{{header}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <p>Hey there, {{name}}!</p>
+    <div class="container">
+       {{book.name}}
+       {{book.isbn}}
+       {{book.genreId}}
+       {{book.author}}
+    </div>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="save()">Save</button>
+    <button type="button" class="btn btn-secondary" (click)="updateBook()">Update</button>
     <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">Close</button>
 </div>
