Fixed genre in the grid also update modal has been built. Implementation to be done.

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -9,7 +9,7 @@
         </p-header>
         <p-column field="isbn" header="ISBN"></p-column>
         <p-column field="name" header="Name"></p-column>
-        <p-column field="genre" header="Genre"></p-column>
+        <p-column field="genre.genre" header="Genre"></p-column>
         <p-column field="author" header="Auhtor"></p-column>
     </p-dataTable>
     <button mat-fab color="primary" style="float: left;"  (click)="toggle()" title="Change View">
