--- a/src/app/book/updateBookModalTemplate.html
+++ b/src/app/book/updateBookModalTemplate.html
@@ -1,23 +1,23 @@
 <div class="modal-header">
-    <h3 class="modal-title">{{header}}</h3>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
     </button>
+    <h3 class="modal-title">{{header}}</h3>
 </div>
 <div class="modal-body">
     <div class="container"> 
        <form class="update-form">
            <div class="form-group">
                 <label for="isbn">ISBN</label>
-                <input type="text" id="isbn" name="isbn" class="form-control" [(ngModel)]="updateBook.isbn">
+                <input type="text" id="isbn" name="isbn" class="form-control" [(ngModel)]="updateBookObj.isbn">
            </div>
            <div class="form-group">
                <label for="name">Name</label>
-               <input type="text" id="name" name="name" class="form-control"  [(ngModel)]="updateBook.name">
+               <input type="text" id="name" name="name" class="form-control"  [(ngModel)]="updateBookObj.name">
            </div>
            <div class="form-group">
-               <label for="genre"></label>
-               <select name="genre" [(ngModel)]="updateBook.genre">
+               <label for="genre">Genre</label>
+               <select name="genre" class="form-control" [(ngModel)]="updateBookObj.genre.genre">
                     <option *ngFor="let genre of genres" [value]="genre.genre">
                         {{genre.genre}}
                     </option>
@@ -25,12 +25,12 @@
            </div>
            <div class="form-group">
                <label for="author">Author</label>
-               <input type="text" id="author" name="author" class="form-control" [(ngModel)]="updateBook.author">
+               <input type="text" id="author" name="author" class="form-control" [(ngModel)]="updateBookObj.author">
            </div>
        </form>
     </div>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="updateBook(book)">Update</button>
+    <button type="button" class="btn btn-secondary" (click)="updateBook(updateBookObj)">Update</button>
     <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">Close</button>
 </div>
