--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -10,7 +10,7 @@
         <p-column field="isbn" header="ISBN"></p-column>
         <p-column field="name" header="Name"></p-column>
         <p-column field="genre.genre" header="Genre"></p-column>
-        <p-column field="author" header="Auhtor"></p-column>
+        <p-column field="author" header="Author"></p-column>
     </p-dataTable>
     <button mat-fab color="primary" style="float: left;"  (click)="toggle()" title="Change View">
         <i class="fa fa-server" aria-hidden="true"></i>
