--- a/src/app/book/updateBookModalTemplate.html
+++ b/src/app/book/updateBookModalTemplate.html
@@ -2,14 +2,14 @@
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
         <span aria-hidden="true">&times;</span>
     </button>
-    <h3 class="modal-title">{{header}}</h3>
+    <h2 class="modal-title">{{header}}</h2>
 </div>
 <div class="modal-body">
     <div class="container"> 
        <form class="update-form">
            <div class="form-group">
                 <label for="isbn">ISBN</label>
-                <input type="text" id="isbn" name="isbn" class="form-control" [(ngModel)]="updateBookObj.isbn">
+                <input type="text" id="isbn" name="isbn" class="form-control" [(ngModel)]="updateBookObj.isbn" Disabled>
            </div>
            <div class="form-group">
                <label for="name">Name</label>
@@ -31,6 +31,7 @@
     </div>
 </div>
 <div class="modal-footer">
+    <button type="button" class="btn btn-secondary spc" (click)="deleteBook(updateBookObj)">Delete</button>
     <button type="button" class="btn btn-secondary" (click)="updateBook(updateBookObj)">Update</button>
     <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">Close</button>
 </div>
