--- a/src/app/book/updateBookModalTemplate.html
+++ b/src/app/book/updateBookModalTemplate.html
@@ -9,7 +9,7 @@
        <form class="update-form">
            <div class="form-group">
                 <label for="isbn">ISBN</label>
-                <input type="text" id="isbn" name="isbn" class="form-control" [(ngModel)]="updateBookObj.isbn" Disabled>
+                <input type="text" id="isbn" name="isbn" class="form-control" title="ISBN is fixed." [(ngModel)]="updateBookObj.isbn" Disabled>
            </div>
            <div class="form-group">
                <label for="name">Name</label>
